fix categories overflow

--- a/datasets/datasets.css
+++ b/datasets/datasets.css
@@ -17,3 +17,10 @@
 .quarto-title-banner {
   border-bottom: 1px solid var(--bs-gray-200);
 }
+
+/* Fix categories overflow scroll-bar */
+#quarto-margin-sidebar .quarto-listing-category {
+  padding-top: 0;
+  font-size: .75rem;
+}
+
